# robocupcpp

./: CMakeLists.txt  README.md  package.xml
include/robocupcpp/: arm.h  i2c.h  joint.h  robocup.h  segment.h
src/: arm.cpp  i2c.cpp  joint.cpp  joint.cpp~  main.cpp  robocup.cpp  robocup.cpp~  serial.cpp
